--- a/fonts.scss
+++ b/fonts.scss
@@ -1,6 +1,6 @@
 @font-face {
   font-family: "M PLUS Rounded 1c";
-  src: url("../fonts/M_PLUS_Rounded_1c/MPLUSRounded1c-Thin.ttf")
+  src: url("/fonts/M_PLUS_Rounded_1c/MPLUSRounded1c-Thin.ttf")
     format("truetype");
   font-weight: 100;
   font-style: normal;
@@ -8,7 +8,7 @@
 
 @font-face {
   font-family: "M PLUS Rounded 1c";
-  src: url("../fonts/M_PLUS_Rounded_1c/MPLUSRounded1c-Light.ttf")
+  src: url("/fonts/M_PLUS_Rounded_1c/MPLUSRounded1c-Light.ttf")
     format("truetype");
   font-weight: 300;
   font-style: normal;
@@ -16,7 +16,7 @@
 
 @font-face {
   font-family: "M PLUS Rounded 1c";
-  src: url("../fonts/M_PLUS_Rounded_1c/MPLUSRounded1c-Regular.ttf")
+  src: url("/fonts/M_PLUS_Rounded_1c/MPLUSRounded1c-Regular.ttf")
     format("truetype");
   font-weight: 400;
   font-style: normal;
@@ -24,7 +24,7 @@
 
 @font-face {
   font-family: "M PLUS Rounded 1c";
-  src: url("../fonts/M_PLUS_Rounded_1c/MPLUSRounded1c-Medium.ttf")
+  src: url("/fonts/M_PLUS_Rounded_1c/MPLUSRounded1c-Medium.ttf")
     format("truetype");
   font-weight: 500;
   font-style: normal;
@@ -32,7 +32,7 @@
 
 @font-face {
   font-family: "M PLUS Rounded 1c";
-  src: url("../fonts/M_PLUS_Rounded_1c/MPLUSRounded1c-Bold.ttf")
+  src: url("/fonts/M_PLUS_Rounded_1c/MPLUSRounded1c-Bold.ttf")
     format("truetype");
   font-weight: 700;
   font-style: normal;
@@ -40,7 +40,7 @@
 
 @font-face {
   font-family: "M PLUS Rounded 1c";
-  src: url("../fonts/M_PLUS_Rounded_1c/MPLUSRounded1c-ExtraBold.ttf")
+  src: url("/fonts/M_PLUS_Rounded_1c/MPLUSRounded1c-ExtraBold.ttf")
     format("truetype");
   font-weight: 800;
   font-style: normal;
@@ -48,7 +48,7 @@
 
 @font-face {
   font-family: "M PLUS Rounded 1c";
-  src: url("../fonts/M_PLUS_Rounded_1c/MPLUSRounded1c-Black.ttf")
+  src: url("/fonts/M_PLUS_Rounded_1c/MPLUSRounded1c-Black.ttf")
     format("truetype");
   font-weight: 900;
   font-style: normal;
