--- a/style.scss
+++ b/style.scss
@@ -1,4 +1,4 @@
-// @import "./node_modules/bootstrap/scss/bootstrap.scss";
+@import "./node_modules/bootstrap/scss/bootstrap.scss";
 @import "./fonts.scss";
 // @import "./themes.scss";
 
