--- a/src/style.scss
+++ b/src/style.scss
@@ -1,5 +1,5 @@
-@import "../node_modules/bootstrap/scss/bootstrap.scss";
-// @import "./fonts.scss";
+@import "bootstrap/scss/bootstrap.scss";
+@import "./fonts.scss";
 // @import "./themes.scss";
 
 
