--- a/src/gradients.scss
+++ b/src/gradients.scss
@@ -25,21 +25,17 @@
 }
 
 .gradient-self-fixing-tests {
-  background: linear-gradient(
-    254deg,
-    rgb(209 0 175 / 67%) 0% 0%,
-    rgb(26 119 130) 100%
-  );
+  background: linear-gradient(254deg, #a8953296 0% 0%, #1a7782);
   animation: vibrantPulse 8s ease infinite;
 }
 
 .gradient-precision-prompts {
-  background: linear-gradient(to bottom, #fe0000 0%, #00e5ff 100%);
+  background: linear-gradient(23deg, #fe0000d6, #d2ff00cc);
   animation: vibrantPulse 8s ease infinite;
 }
 
 .gradient-test-results {
-  background: linear-gradient(178deg, rgb(63 205 253) 0%, rgb(253 200 81) 80%);
+  background: linear-gradient(178deg, #3fcdfd, #33a915a1 80%);
   animation: vibrantPulse 8s ease infinite;
 }
 
@@ -62,16 +58,10 @@
 }
 
 .gradient-aider {
-  background: linear-gradient(
-    349deg,
-    rgb(157 0 17) 0%,
-    rgb(0 231 255 / 57%) 80%
-  );
+  background: linear-gradient(349deg, #53ff00a6, #0060ff91 80%);
   animation: vibrantPulse 8s ease infinite;
 }
 
-
-
 @keyframes vibrantPulse {
   0%,
   100% {
@@ -96,88 +86,85 @@
   }
 }
 
-@keyframes vibrantPulse {
-  0%,
-  100% {
-    background-position: 0% 50%;
-    background-size: 200% 200%;
-  }
-  50% {
-    background-position: 100% 50%;
-    background-size: 250% 250%;
-  }
-}
+// @keyframes vibrantPulse {
+//   0%,
+//   100% {
+//     background-position: 0% 50%;
+//     background-size: 200% 200%;
+//   }
+//   50% {
+//     background-position: 100% 50%;
+//     background-size: 250% 250%;
+//   }
+// }
 
-@keyframes gradientFlow {
-  0% {
-    background-position: 0% 50%;
-  }
-  50% {
-    background-position: 100% 50%;
-  }
-  100% {
-    background-position: 0% 50%;
-  }
-}
-
+// @keyframes gradientFlow {
+//   0% {
+//     background-position: 0% 50%;
+//   }
+//   50% {
+//     background-position: 100% 50%;
+//   }
+//   100% {
+//     background-position: 0% 50%;
+//   }
+// }
 
 @keyframes gradientBG {
-      0%,
-      100% {
-        background-position: 0% 50%, 0% 0%;
-      }
-      25% {
-        background-position: 100% 50%, 100% 50%;
-      }
-      50% {
-        background-position: 50% 100%, 50% 100%;
-      }
-      75% {
-        background-position: 100% 0%, 0% 100%;
-      }
-    }
+  0%,
+  100% {
+    background-position: 0% 50%, 0% 0%;
+  }
+  25% {
+    background-position: 100% 50%, 100% 50%;
+  }
+  50% {
+    background-position: 50% 100%, 50% 100%;
+  }
+  75% {
+    background-position: 100% 0%, 0% 100%;
+  }
+}
 
-    @keyframes rotateGradient {
-      0% {
-        --angle: 45deg;
-      }
-      100% {
-        --angle: 405deg;
-      }
-    }
+@keyframes rotateGradient {
+  0% {
+    --angle: 45deg;
+  }
+  100% {
+    --angle: 405deg;
+  }
+}
 
-    @keyframes ripple {
-      0%,
-      100% {
-        background-size: 300% 300%, 100% 100%;
-      }
-      50% {
-        background-size: 300% 300%, 200% 200%;
-      }
-    }
+@keyframes ripple {
+  0%,
+  100% {
+    background-size: 300% 300%, 100% 100%;
+  }
+  50% {
+    background-size: 300% 300%, 200% 200%;
+  }
+}
 
+// @keyframes vibrantPulse {
+//   0%,
+//   100% {
+//     background-position: 0% 50%;
+//     background-size: 200% 200%;
+//   }
+//   50% {
+//     background-position: 100% 50%;
+//     background-size: 250% 250%;
+//   }
+// }
 
-
-    @keyframes vibrantPulse {
-      0%,
-      100% {
-        background-position: 0% 50%;
-        background-size: 200% 200%;
-      }
-      50% {
-        background-position: 100% 50%;
-        background-size: 250% 250%;
-      }
-    }
-
-    @keyframes gradientFlow {
-      0% {
-        background-position: 0% 50%;
-      }
-      50% {
-        background-position: 100% 50%;
-      }
-      100% {
-        background-position: 0% 50%;
-      }
-    }
+// @keyframes gradientFlow {
+//   0% {
+//     background-position: 0% 50%;
+//   }
+//   50% {
+//     background-position: 100% 50%;
+//   }
+//   100% {
+//     background-position: 0% 50%;
+//   }
+// }
